# stm32-arm_gcc-ninja-make-cmake

./: CMakeLists.txt  fire.sh  须知.txt
User/Src/: gpio.c  main.c
